index.css
html {
  margin: 0
}

body {
  text-align: center;
  margin: 5px 20px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  /* background: green; */
  border-radius: 50%;
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7ef8c9+0,04ff24+100 */
  background: #fff;
  /* Old browsers */
  background: -moz-linear-gradient(top, #fff 0%, #7ef8c9 100%);
  /* FF3.6-15 */
  background: -webkit-linear-gradient(top, #fff 0%, #7ef8c9 100%);
  /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, #fff 0%, #7ef8c9 100%);
  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ef8c9', endColorstr='#04ff24', GradientType=0);
  /* IE6-9 */
}



path {
  stroke-dasharray: 2950;
  stroke-dashoffset: 2950;
  stroke-width: 100px;
  stroke: white;
}

.big {
  animation: dash 5s ease-in forwards;
}

.i.i-left {
  animation: dash-reverse 3s ease-out forwards;
}

.i.i-right {
  animation: dash-reverse 3s ease-out 1s forwards;
}

.dot.dot-right {
  animation: dash 1s linear 4s forwards;
}

.dot.dot-left {
  animation: dash 1s linear 4.7s forwards;
}

svg {
  animation: turn-around 5s ease-in forwards reverse;
}

.logo {
  margin-top: 1em;
  display: block;
  /* background: green; */
  border-radius: 50%;
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7ef8c9+0,04ff24+100 */
  background: #7ef8c9;
  /* Old browsers */
  background: -moz-linear-gradient(top, #7ef8c9 0%, #04ff24 100%);
  /* FF3.6-15 */
  background: -webkit-linear-gradient(top, #7ef8c9 0%, #04ff24 100%);
  /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, #7ef8c9 0%, #04ff24 100%);
  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ef8c9', endColorstr='#04ff24', GradientType=0);
  /* IE6-9 */
  width: 20em;
  height: 20em;
  animation: shadowset 5s ease forwards, drop 6s ease-out forwards;
}

.clickToReplay {
  color: #959595;
  font-size: 1.5em;
  font-weight: bolder;
  margin-top: 1em;
  filter: opacity(0%);
  animation: soft-fade-in 3s ease-out 8s forwards;
}

@keyframes soft-fade-in {
  0% {
    filter: opacity(0%);
  }
  100% {
    filter: opacity(100%);
  }
}

@keyframes shadowset {
  /* 0% {
    filter: drop-shadow(5px 5px 15px rgba(1, 1, 1, .2));
  }
  25% {
    filter: drop-shadow(25px 25px 25px rgba(1, 1, 1, .2));
  }
  75% {
    filter: drop-shadow(4px 4px 3px rgba(1, 1, 1, .2));
  }
  100% {
    filter: none;
  } */
}

@keyframes dash {
  0% {
    stroke-dashoffset: 2950;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

@keyframes dash-reverse {
  0% {
    stroke-dashoffset: -2950;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

@keyframes drop {
  0% {
    transform: translateY(-50px);
  }
  100% {
    transform: translateY(0px);
  }
}

@keyframes turn-around {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

